very messy and notworking draft of dynamic form

--- a/japps/templates/japps/submission.html
+++ b/japps/templates/japps/submission.html
@@ -34,3 +34,12 @@
     {% endfor %}
     <input type="submit" value="Submit" />
 </form>
+
+<hr/>
+<hr/>
+
+<form action="/job/" method="post">
+  {% csrf_token %}
+  {{ nice_form }}
+  <input type="submit" value="Submit" />
+</form>
