--- a/japps/templates/japps/index.html
+++ b/japps/templates/japps/index.html
@@ -1,4 +1,9 @@
 {% extends "japps/base.html" %}
 {% block body %}
-  <h1>"ciao"</h1>
+  <h1>"CyVerseUK Apps"</h1>
+  <ul>
+    {% for el in risposta %}
+      <li><a href="{% url 'japps:submission' %}">{{ el|slice:":-2" }}</a></li>
+    {% endfor %}
+  </ul>
 {% endblock %}
