made the main page more user friendly with instruction about how to get the token

--- a/japps/templates/japps/index.html
+++ b/japps/templates/japps/index.html
@@ -8,7 +8,11 @@
       {% endfor %}
     </ul>
   {% else %}
-    <p>{{ risposta }}</p>
+    <p>To authenticate you will need be a registered <a href="https://user.cyverse.org/">Cyverse</a> user and to get a token.<br>
+      Install the following CLI and follow the instruction in the documentation to retrieve a valid token for your user:<br>
+      <a href="https://github.com/iPlantCollaborativeOpenSource/cyverse-sdk">https://github.com/iPlantCollaborativeOpenSource/cyverse-sdk</a></p>
+    <p></p>
+    <p style="color:red"><strong>{{ risposta }}</strong></p>
     <form action="/japps/" method="post" data-parsley-validate>
       {% csrf_token %}
       <table>
