user friendly submitted page

--- a/japps/templates/japps/job_submitted.html
+++ b/japps/templates/japps/job_submitted.html
@@ -1,7 +1,2 @@
-<p>{{ json_run }}</p>
-<p>{{ request.FILES }}</p>
-{# <p>{{ request.POST }}</p> #}
-<p>{{ risposta }}</p>
-<p>{{ codice }}</p>
-<p>{{ t }}</p>
-<p>{{ headers }}</p>
+<p><strong>Job Submitted</strong> with ID {{ job_id }}</p>
+<p>Please check your archive folder in the <a href="https://de.iplantcollaborative.org/de/">Discovery Environment</a></p>
