--- a/japps/templates/japps/index.html
+++ b/japps/templates/japps/index.html
@@ -12,7 +12,7 @@
       Install the following CLI and follow the instruction in the documentation to retrieve a valid token for your user:<br>
       <a href="https://github.com/iPlantCollaborativeOpenSource/cyverse-sdk">https://github.com/iPlantCollaborativeOpenSource/cyverse-sdk</a></p>
     <p></p>
-    <p style="color:red"><strong>{{ risposta }}</strong></p>
+    <p class="warning"><strong>{{ risposta }}</strong></p>
     <form action="/japps/" method="post" data-parsley-validate>
       {% csrf_token %}
       <table>
