--- a/japps/templates/japps/base.html
+++ b/japps/templates/japps/base.html
@@ -12,6 +12,7 @@
     <meta property="og:image" content=""/>
     <meta property="og:description" content="">-->
     <link rel="stylesheet" type="text/css" href="{% static 'japps/stylesheet.css' %}" media="screen">
+    <link rel="stylesheet" type="text/css" href="{% static 'japps/fonts.css' %}" media="screen">
   </head>
 <body>
   <div class="page-header">
