more styling, add gradient header

--- a/japps/templates/japps/base.html
+++ b/japps/templates/japps/base.html
@@ -15,9 +15,10 @@
     <link rel="stylesheet" type="text/css" href="{% static 'japps/fonts.css' %}" media="screen">
   </head>
 <body>
-  <div class="page-header">
-    <hr/>
-  </div>
+  <header>
+    <p>insert logo</p>
+    <p>and link</p>
+  </header>
   <div class="content">
     {% block body %}
     {% endblock %}
