--- a/japps/static/japps/stylesheet.css
+++ b/japps/static/japps/stylesheet.css
@@ -3,10 +3,31 @@
 }
 a {
   color:#315683;
+  text-decoration: none;
 }
-body {
+a:hover {
+  text-decoration: underline;
+}
+.content {
     padding-left: 20px;
 }
-h1, h2, h3, h4, h5, h6, p, table, input {
+h1, h2, h3, h4, h5, h6, p, table, input, li {
   font-family: "Roboto";
+}
+li {
+  padding: 0.3em;
+  font-weight: 600;
+}
+header {
+    background: #CDD5EA ; /* For browsers that do not support gradients */
+    background: -webkit-linear-gradient(#CDD5EA, #ffffff); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(#CDD5EA, #ffffff); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(#CDD5EA, #ffffff); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(#CDD5EA, #ffffff); /* Standard syntax */
+    padding: 0;
+    margin-top:-1em;
+}
+body{
+    margin:0;
+    padding:0;
 }
