--- a/japps/templates/japps/submission.html
+++ b/japps/templates/japps/submission.html
@@ -9,6 +9,6 @@
     <table>
       {{ nice_form.as_table }}
     </table>
-    <input type="submit" value="Submit" />
+    <input type="submit" value="Submit" style="margin: 0.2em; padding: 0.2em"/>
   </form>
 {% endblock %}
