formatted alt for no image internet browsers and add star to required form fields

--- a/japps/templates/japps/base.html
+++ b/japps/templates/japps/base.html
@@ -16,14 +16,14 @@
   </head>
 <body>
   <header>
-    <a href="/japps"><img id="cyverse_logo" src="{% static 'japps/images/cyverse_rgb.png' %}" alt="CyVerse logo"/></a>
+    <a href="/japps"><img id="cyverse_logo" src="{% static 'japps/images/cyverse_rgb.png' %}" alt="[IMAGE: CyVerse logo]"/></a>
   </header>
   <div class="content">
     {% block body %}
     {% endblock %}
   </div>
   <footer>
-    <a href="http://earlham.ac.uk/"><img id="earlham_logo" src="{% static 'japps/images/Earlham_Institute_single_line.png' %}" alt="Earlham Institute"/></a>
+    <a href="http://earlham.ac.uk/"><img id="earlham_logo" src="{% static 'japps/images/Earlham_Institute_single_line.png' %}" alt="[IMAGE: Earlham Institute]"/></a>
   </footer>
 </body>
 </html>
