add url in og meta

--- a/japps/templates/japps/base.html
+++ b/japps/templates/japps/base.html
@@ -11,6 +11,7 @@
     <meta property="og:type" content="website"/>
     <meta property="og:image" content="{% static 'japps/images/cyverse_small.png' %}"/>
     <meta property="og:description" content="job submission to Earlham Insitute cluster for bioinformatics pipelines">
+    <meta property="og:url" content="https://cyverseuk.herokuapp.com/japps"/>
     <link rel="stylesheet" type="text/css" href="{% static 'japps/stylesheet.css' %}" media="screen">
     <link rel="stylesheet" type="text/css" href="{% static 'japps/fonts.css' %}" media="screen">
   </head>
