--- a/japps/templates/japps/base.html
+++ b/japps/templates/japps/base.html
@@ -14,6 +14,7 @@
     <meta property="og:url" content="https://cyverseuk.herokuapp.com/japps"/>
     <link rel="stylesheet" type="text/css" href="{% static 'japps/stylesheet.css' %}" media="screen">
     <link rel="stylesheet" type="text/css" href="{% static 'japps/fonts.css' %}" media="screen">
+    <link rel="icon" href="{% static 'japps/images/cyverse_small.png' %}">
   </head>
 <body>
   <header>
