--- a/japps/templates/japps/base.html
+++ b/japps/templates/japps/base.html
@@ -7,7 +7,7 @@
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1"/> -->
     <meta name="description" content="a web page to submit jobs to the cyverse infrasctructure in the UK"/>
     <meta name"author" content="Alice Minotto"/>
-    <meta property="og:title" content="CyVeerse UK"/>
+    <meta property="og:title" content="CyVerse UK"/>
     <meta property="og:type" content="website"/>
     <meta property="og:image" content="{% static 'japps/images/cyverse_small.png' %}"/>
     <meta property="og:description" content="job submission to Earlham Insitute cluster for bioinformatics pipelines">
