--- a/japps/templates/japps/contact.html
+++ b/japps/templates/japps/contact.html
@@ -5,6 +5,7 @@
       <p class="alert">Your request has been submitted.</p>
     </div>
   {% endif %}
+  <h2>Contact us</h2>
   <form action="/japps/contact/" method="post">
     {% csrf_token %}
     <table>
