--- a/japps/static/japps/stylesheet.css
+++ b/japps/static/japps/stylesheet.css
@@ -17,12 +17,16 @@
     padding-left: 20px;
     display: block;
 }
-.alert {
+.messages {
     padding: 20px;
     margin-right: 20px;
     background-color: rgba(84, 206, 169, 0.8); /* #54CEA9 */
     margin-bottom: 15px;
     color: black;
+}
+.messages li {
+  font-weight: normal !important;
+  list-style-type: none;
 }
 a {
   color:#315683;
