--- a/japps/templates/japps/contact.html
+++ b/japps/templates/japps/contact.html
@@ -16,6 +16,6 @@
     <table>
       {{ form.as_table }}
     </table>
-    <input type="submit" value="Send" style="margin: 0.2em; padding: 0.2em"/>
+    <input type="submit" value="Send"/>
   </form>
 {% endblock %}
