--- a/japps/templates/japps/base.html
+++ b/japps/templates/japps/base.html
@@ -18,7 +18,7 @@
   </head>
 <body>
   <header>
-    <a href="/japps"><img id="cyverse_logo" src="{% static 'japps/images/cyverse_rgb.png' %}" alt="[IMAGE: CyVerse logo]"/></a>
+    <a href="/"><img id="cyverse_logo" src="{% static 'japps/images/cyverse_rgb.png' %}" alt="[IMAGE: CyVerse logo]"/></a>
   </header>
   <div class="content">
     {% block body %}
