--- a/japps/templates/japps/base.html
+++ b/japps/templates/japps/base.html
@@ -10,8 +10,9 @@
     <meta property="og:title" content="CyVerse UK"/>
     <meta property="og:type" content="website"/>
     <meta property="og:image" content="{% static 'japps/images/cyverse_small.png' %}"/>
-    <meta property="og:description" content="job submission to Earlham Insitute cluster for bioinformatics pipelines">
+    <meta property="og:description" content="job submission to Earlham Insitute cluster for bioinformatics pipelines"/>
     <meta property="og:url" content="https://cyverseuk.herokuapp.com/japps"/>
+    <meta name="viewport" content="initial-scale=1"/>
     <link rel="stylesheet" type="text/css" href="{% static 'japps/stylesheet.css' %}" media="screen">
     <link rel="stylesheet" type="text/css" href="{% static 'japps/fonts.css' %}" media="screen">
     <link rel="icon" href="{% static 'japps/images/cyverse_small.png' %}">
