implicit link as it was too long for small devices

--- a/japps/templates/japps/index.html
+++ b/japps/templates/japps/index.html
@@ -9,8 +9,7 @@
     </ul>
   {% else %}
     <p>To authenticate you will need be a registered <a href="https://user.cyverse.org/">Cyverse</a> user and to get a token.<br>
-      Install the following CLI and follow the instruction in the documentation to retrieve a valid token for your user:<br>
-      <a href="https://github.com/iPlantCollaborativeOpenSource/cyverse-sdk">https://github.com/iPlantCollaborativeOpenSource/cyverse-sdk</a></p>
+      Install the <a href="https://github.com/iPlantCollaborativeOpenSource/cyverse-sdk">CyVerse CLI</a> and follow the instruction in the documentation to retrieve a valid token for your user.</p>
     <p></p>
     <p class="warning"><strong>{{ risposta }}</strong></p>
     <form action="/" method="post" data-parsley-validate>
