--- a/japps/static/japps/stylesheet.css
+++ b/japps/static/japps/stylesheet.css
@@ -38,7 +38,7 @@ a:hover {
   text-decoration: underline;
 }
 h1, h2, h3, h4, h5, h6, p, table, input, li {
-  font-family: "Roboto";
+  font-family: "Roboto", "Noto Serif";
 }
 li {
   padding: 0.3em;
