changed architecture to django convention for maintanability and to enable http_referer to work fine

--- a/japps/templates/japps/submission.html
+++ b/japps/templates/japps/submission.html
@@ -12,7 +12,7 @@
     </ul>
   {% endif %}
 
-  <form action="/job_submitted/" method="post" enctype="multipart/form-data" data-parsley-validate>
+  <form action="" method="POST" enctype="multipart/form-data" data-parsley-validate>
     {% csrf_token %}
     <table>
       {{ nice_form.as_table }}
