--- a/japps/static/japps/stylesheet.css
+++ b/japps/static/japps/stylesheet.css
@@ -49,6 +49,14 @@
   border-color: rgba(198, 31, 22, 0.7);
   color: rgba(198, 31, 22, 0.7);
 }
+ul.errorlist li {
+  color:#C61F16;
+  list-style-type: none;
+  margin-left: 0px;
+  margin-right: 20px;
+  margin-bottom: 15px;
+  padding-left: 0px !important;
+}
 a {
   color:#315683;
   text-decoration: none;
