using sass for form field selection and error, added a css file

--- a/japps/templates/japps/base.html
+++ b/japps/templates/japps/base.html
@@ -15,6 +15,7 @@
     <meta name="viewport" content="initial-scale=1"/>
     <link rel="stylesheet" type="text/css" href="{% static 'japps/stylesheet.css' %}" media="screen">
     <link rel="stylesheet" type="text/css" href="{% static 'japps/fonts.css' %}" media="screen">
+    <link rel="stylesheet" type="text/css" href="{% static 'japps/sass_extension.css' %}" media="screen">
     <link rel="icon" href="{% static 'japps/images/cyverse_small.png' %}">
   </head>
 <body>
