--- a/japps/static/japps/sass_extension.scss
+++ b/japps/static/japps/sass_extension.scss
@@ -2,7 +2,7 @@ $EI-red: #C61F16;
 form {
   td {
     ul.errorlist + input {
-      box-shadow: 0 0 3px #CC0000;
+      box-shadow: 0 0 1.5px 1.5px red;
     }
   }
 }
