--- a/japps/templates/japps/base.html
+++ b/japps/templates/japps/base.html
@@ -16,6 +16,8 @@
     <link rel="stylesheet" type="text/css" href="{% static 'japps/stylesheet.css' %}" media="screen">
     <link rel="stylesheet" type="text/css" href="{% static 'japps/fonts.css' %}" media="screen">
     <link rel="stylesheet" type="text/css" href="{% static 'japps/sass_extension.css' %}" media="screen">
+    {% block more_styles %}
+    {% endblock %}
     <link rel="icon" href="{% static 'japps/images/cyverse_small.png' %}">
   </head>
 <body>
