--- a/japps/static/japps/stylesheet.css
+++ b/japps/static/japps/stylesheet.css
@@ -64,6 +64,10 @@
 .description li {
   font-weight: normal;
 }
+ul.errorlist {
+  -webkit-margin-before: 0px;
+  -webkit-padding-start: 0px;
+}
 ul.errorlist li {
   color:#C61F16;
   list-style-type: none;
@@ -71,6 +75,9 @@ ul.errorlist li {
   margin-right: 20px;
   margin-bottom: 15px;
   padding-left: 0px !important;
+  font-style: italic;
+  font-weight: 500;
+  text-shadow: 2px 2px 8px #C61F16;
 }
 a {
   color:#315683;
