--- a/japps/static/japps/stylesheet.css
+++ b/japps/static/japps/stylesheet.css
@@ -1,5 +1,6 @@
 * {
   box-sizing: content-box;
+  font-family: "Roboto", "Noto Serif";
 }
 @-ms-viewport{
     width: extend-to-zoom;
@@ -17,6 +18,7 @@
     min-width: 10em !important;
     height: auto !important;
     box-sizing: content-box;
+    display: inline-block;
 }
 #earlham_logo{
   max-width: 10%;
@@ -57,6 +59,28 @@
 .des_logo {
   width: 90%;
 }
+.menu {
+  position: relative;
+  float: right;
+  display: inline !important;
+  list-style-type: none;
+  padding: 2em;
+  margin: 0;
+}
+.menu li {
+  display: inline;
+  bottom: 0;
+  padding-right: 1em;
+}
+.menu li a {
+  color: #315683 !important;
+  text-decoration: none;
+  font-size: 16px;
+}
+.menu li a:hover {
+  color: red;
+  text-shadow: 1px 1px 6px #315683;
+}
 .description p {
   font-size: large;
   font-family: "Roboto", "Noto Serif";
@@ -86,9 +110,6 @@ a {
 a:hover {
   text-decoration: underline;
 }
-h1, h2, h3, h4, h5, h6, p, table, input, li {
-  font-family: "Roboto", "Noto Serif";
-}
 li {
   padding: 0.3em;
   font-weight: 600;
@@ -116,6 +137,7 @@ header {
     padding: 0;
     margin-top:-1em;
     box-sizing: content-box;
+    position: relative;
 }
 body{
     margin:0;
