--- a/japps/templates/japps/base.html
+++ b/japps/templates/japps/base.html
@@ -21,8 +21,12 @@
     <link rel="icon" href="{% static 'japps/images/cyverse_small.png' %}">
   </head>
 <body>
-  <header>
+  <header style="display: block">
     <a href="/"><img id="cyverse_logo" src="{% static 'japps/images/cyverse_rgb.png' %}" alt="[IMAGE: CyVerse logo]"/></a>
+    <ul class="menu">
+      <li><a href="{% url 'japps:applications' %}">Available Apps</a></li>
+      <li><a href="">Contact us</a></li>
+    </ul>
   </header>
   <div class="content">
     {% block body %}
