fix max image size for big logos

--- a/japps/templates/japps/GWasser.html
+++ b/japps/templates/japps/GWasser.html
@@ -1,7 +1,7 @@
 {% extends "japps/app_description.html" %}
 {% load static %}
 {% block image %}
-  <img img src="{% static 'japps/images/GWASSER_LOGO.png' %}" alt="[IMAGE: GWasser logo]" />
+  <img img src="{% static 'japps/images/GWASSER_LOGO.png' %}" alt="[IMAGE: GWasser logo]" style="max-width: 100%"/>
 {% endblock %}
 {% block description %}
   <p><strong>GWASSER</strong> is an R based script for performing simple genome wide association using statistical modelling. It is adapted from technique used at NIAB for testing the ability to perform genome wide association study of the awning phenotype in wheat (<em>Triticum aestivum</em>) on lines of their MAGIC population.</p>
