--- a/japps/templates/japps/submission.html
+++ b/japps/templates/japps/submission.html
@@ -1,4 +1,7 @@
 {% extends "japps/base.html" %}
+{% block more_styles %}
+<script src="https://code.jquery.com/jquery-3.1.1.js" integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA=" crossorigin="anonymous"></script>
+{% endblock %}
 {% block body %}
   <h2>{{ title }}</h2>
 
