restyling the radio button on a single line above the selector

--- a/japps/static/japps/stylesheet.css
+++ b/japps/static/japps/stylesheet.css
@@ -150,3 +150,10 @@ footer {
   display: block;
   box-sizing: content-box;
 }
+form table td ul li {
+  list-style-type: none;
+  display: inline !important;
+}
+form table td ul li input {
+  display: inline !important;
+}
