--- a/japps/templates/japps/submission.html
+++ b/japps/templates/japps/submission.html
@@ -24,4 +24,5 @@
     </table>
     <input type="submit" value="Submit" style="margin: 0.2em; padding: 0.2em"/>
   </form>
+  <p>Job submission may take a while, please do not re-submit.</p>
 {% endblock %}
