--- a/japps/templates/japps/index.html
+++ b/japps/templates/japps/index.html
@@ -12,12 +12,6 @@
       Install the <a href="https://github.com/iPlantCollaborativeOpenSource/cyverse-sdk">CyVerse CLI</a> and follow the instruction in the documentation to retrieve a valid token for your user.</p>
     <p></p>
     <p class="warning"><strong>{{ risposta }}</strong></p>
-    <form action="/" method="post" data-parsley-validate>
-      {% csrf_token %}
-      <table>
-        {{ token_form.as_table }}
-      </table>
-      <input type="submit" value="Submit" />
-    </form>
+      <a href="https://agave.iplantc.org/authorize/?client_id=FtYbpdfIqOhQ6TfK6zoUfdO3ZvUa&response_type=code&redirect_uri=http://127.0.0.1:8000&scope=PRODUCTION"><input type="submit" value="Login" /></a>
   {% endif %}
 {% endblock %}
