--- a/japps/templates/japps/index.html
+++ b/japps/templates/japps/index.html
@@ -8,10 +8,9 @@
       {% endfor %}
     </ul>
   {% else %}
-    <p>To authenticate you will need be a registered <a href="https://user.cyverse.org/">Cyverse</a> user and to get a token.<br>
-      Install the <a href="https://github.com/iPlantCollaborativeOpenSource/cyverse-sdk">CyVerse CLI</a> and follow the instruction in the documentation to retrieve a valid token for your user.</p>
+    <p>To see a list of available applications as a non registered user go <a href="/applications">here</a>.</p> <p>To submit a job you must first log in with a <a href="https://user.cyverse.org/">Cyverse</a> account.</p>
     <p></p>
     <p class="warning"><strong>{{ risposta }}</strong></p>
-      <a href="https://agave.iplantc.org/authorize/?client_id=FtYbpdfIqOhQ6TfK6zoUfdO3ZvUa&response_type=code&redirect_uri=http://127.0.0.1:8000&scope=PRODUCTION"><input type="submit" value="Login" /></a>
+      <a href="https://agave.iplantc.org/authorize/?client_id=FtYbpdfIqOhQ6TfK6zoUfdO3ZvUa&response_type=code&redirect_uri=http://127.0.0.1:8000&scope=PRODUCTION"><input type="submit" value="Login with Cyverse" /></a>
   {% endif %}
 {% endblock %}
