added dropdown menu and moved jquery upload from submission.html to base.html

--- a/japps/templates/japps/base.html
+++ b/japps/templates/japps/base.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'japps/stylesheet.css' %}" media="screen">
     <link rel="stylesheet" type="text/css" href="{% static 'japps/fonts.css' %}" media="screen">
     <link rel="stylesheet" type="text/css" href="{% static 'japps/sass_extension.css' %}" media="screen">
+    <script src="https://code.jquery.com/jquery-3.1.1.js" integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA=" crossorigin="anonymous"></script>
     {% block more_styles %}
     {% endblock %}
     <link rel="icon" href="{% static 'japps/images/cyverse_small.png' %}">
@@ -27,7 +28,13 @@
       <li><a href="{% url 'japps:applications' %}">Available Apps</a></li>
       <li><a href="">Contact us</a></li>
       {% if username %}
-        <li>Hello, <a href="">{{ username }}</a></li>
+      <div class="dropdown">
+        <li>Hello, <button class="dropbtn">{{ username }}</button></li>
+          <div id="prof_dropdown" class="dropdown-content">
+            <a href="">Archive</a>
+            <a href="">Log out</a>
+          </div>
+      </div>
       {% endif %}
     </ul>
   </header>
