--- a/japps/templates/japps/contact.html
+++ b/japps/templates/japps/contact.html
@@ -11,7 +11,7 @@
     </ul>
   {% endif %}
   <h2>Contact us</h2>
-  <form action="/japps/contact/" method="post">
+  <form action="" method="post">
     {% csrf_token %}
     <table>
       {{ form.as_table }}
