--- a/japps/templates/japps/contact.html
+++ b/japps/templates/japps/contact.html
@@ -4,7 +4,7 @@
     the for cycle for messages is always required to empty the list
   {% endcomment %}
   {% if messages %}
-    <ul class="messages">
+    <ul class="messages success">
       {% for message in messages %}
         <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
       {% endfor %}
