--- a/japps/templates/japps/base.html
+++ b/japps/templates/japps/base.html
@@ -25,7 +25,7 @@
     <a href="{% url 'japps:index' %}"><img id="cyverse_logo" src="{% static 'japps/images/cyverse_rgb.png' %}" alt="[IMAGE: CyVerse logo]"/></a>
     <ul class="menu">
       <li><a href="{% url 'japps:applications' %}">Available Apps</a></li>
-      <li><a href="">Contact us</a></li>
+      <li><a href="{% url 'japps:contact' %}">Contact us</a></li>
       {% if username %}
         <li>Hello, <a href="">{{ username }}</a></li>
       {% endif %}
