--- a/japps/static/japps/stylesheet.css
+++ b/japps/static/japps/stylesheet.css
@@ -30,6 +30,31 @@
   height: auto !important;
   box-sizing: content-box;
 }
+#prof_dropdown {
+  position: absolute;
+  clear: both;
+  background-color: #f9f9f9;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+#prof_dropdown li {
+  display: block;
+  box-sizing: border-box;
+}
+#prof_dropdown li a {
+  box-sizing: border-box !important;
+}
+#prof_dropdown li a:hover {
+  background-color: #f1f1f1 !important;
+  text-shadow: none;
+}
+.dropdown {
+  display: inline;
+  float: right;
+  box-sizing: inherit;
+}
+.dropdown-content li {
+  text-align: center;
+}
 .warning {
   color:#C61F16;
 }
@@ -60,6 +85,9 @@
 .des_logo {
   width: 90%;
 }
+.menu li .dropbtn:hover {
+  text-shadow: 1px 1px 6px #315683;
+}
 .menu {
   position: relative;
   float: right;
@@ -80,7 +108,6 @@
   font-size: 16px;
 }
 .menu li a:hover {
-  color: red;
   text-shadow: 1px 1px 6px #315683;
 }
 .description p {
