--- a/japps/templates/japps/base.html
+++ b/japps/templates/japps/base.html
@@ -32,7 +32,7 @@
         <li><div class="dropdown">Hello, <span class="dropbtn">{{ username }}</span>
           <ul id="prof_dropdown" class="dropdown-content" hidden>
               <li><a href="">Archive</a></li>
-              <li><a href="">Log out</a></li>
+              <li><a href="{% url 'japps:logout' %}">Log out</a></li>
           </ul>
         </div></li>
       {% endif %}
