very first functionality for 1 level depth archive view. also changed default archiveSystem to our system

--- a/japps/templates/japps/archive.html
+++ b/japps/templates/japps/archive.html
@@ -1,4 +1,9 @@
 {% extends "japps/base.html" %}
 {% block body %}
-  <h1>{{ username }}'s archive</h1>
+  <h1>{{ username|capfirst }}'s Archive</h1>
+  <ul>
+    {% for file in dir_list %}
+      <li>{{ file }}</li>
+    {% endfor %}
+  </ul>
 {% endblock %}
