draft style for archive and divisin between files and folder added

--- a/japps/static/japps/stylesheet.css
+++ b/japps/static/japps/stylesheet.css
@@ -47,6 +47,14 @@
   background-color: #f1f1f1 !important;
   text-shadow: none;
 }
+.subfolder {
+  color: #315683 !important;
+  text-decoration: none;
+  font-size: 16px;
+}
+.subfolder:hover {
+  text-decoration: underline;
+}
 .dropdown {
   display: inline;
   float: right;
