--- a/japps/static/japps/stylesheet.css
+++ b/japps/static/japps/stylesheet.css
@@ -47,12 +47,17 @@
   background-color: #f1f1f1 !important;
   text-shadow: none;
 }
-.subfolder {
+.subfolder button {
   color: #315683 !important;
   text-decoration: none;
   font-size: 16px;
+  background:none!important;
+  border:none !important;
+  padding:0!important;
+  font: inherit;
+  cursor: pointer;
 }
-.subfolder:hover {
+.subfolder button:hover {
   text-decoration: underline;
 }
 .dropdown {
